# xlibc

./: CMakeLists.txt  README.md
.cache/clangd/index/: log.c.2B2407D43976636D.idx
include/: log.h
src/: log.c
